atyualizacao do email

--- a/public/forgot-password.html
+++ b/public/forgot-password.html
@@ -33,15 +33,24 @@
             <a href="/login.html">Voltar para o Login</a>
         </div>
     </div>
-    <script>
-        const urlParams = new URLSearchParams(window.location.search);
-        const messageDiv = document.getElementById('message');
-        if (urlParams.get('status') === 'success') {
-            messageDiv.textContent = 'E-mail enviado! Verifique sua caixa de entrada.';
-        } else if (urlParams.get('error')) {
+<script>
+    const urlParams = new URLSearchParams(window.location.search);
+    const messageDiv = document.getElementById('message');
+    const errorType = urlParams.get('error');
+    const statusType = urlParams.get('status');
+
+    if (statusType === 'success') {
+        messageDiv.textContent = 'E-mail enviado! Verifique sua caixa de entrada.';
+        // Limpa o formulário para evitar reenvio acidental
+        document.querySelector('form').style.display = 'none'; 
+    } else if (errorType) {
+        if (errorType === 'not_found') {
             messageDiv.textContent = 'Nenhum usuário encontrado com este e-mail.';
-            messageDiv.style.color = '#dc3545';
+        } else if (errorType === 'server_error') {
+            messageDiv.textContent = 'Ocorreu um erro no servidor. Tente novamente mais tarde.';
         }
-    </script>
+        messageDiv.style.color = '#dc3545';
+    }
+</script>
 </body>
 </html>
