--- a/public/verify-notice.html
+++ b/public/verify-notice.html
@@ -10,6 +10,21 @@
         h2 { color: #0056b3; }
         p { color: #555; line-height: 1.6; }
         .icon { font-size: 4em; color: #28a745; margin-bottom: 20px; }
+        
+        /* --- CSS ADICIONADO --- */
+        .login-link {
+            margin-top: 25px;
+            font-size: 0.9em;
+        }
+        .login-link a {
+            color: #007bff;
+            text-decoration: none;
+            font-weight: 500;
+        }
+        .login-link a:hover {
+            text-decoration: underline;
+        }
+        /* --- FIM DO CSS ADICIONADO --- */
     </style>
 </head>
 <body>
@@ -18,6 +33,10 @@
         <h2>Quase lá! Verifique seu e-mail.</h2>
         <p>Enviamos um link de confirmação para o seu endereço de e-mail. Por favor, clique no link para ativar sua conta e poder fazer o login.</p>
         <p>Não recebeu? Verifique sua caixa de spam.</p>
-    </div>
+
+        <div class="login-link">
+            <a href="/login.html">Voltar para o Login</a>
+        </div>
+        </div>
 </body>
 </html>
