--- a/public/dm.html
+++ b/public/dm.html
@@ -48,6 +48,13 @@
                 </div>
 
                <div id="messages-container"></div>
+			   
+			   <div id="typing-indicator" class="typing-indicator" style="display: none;">
+    <span id="typing-user-name"></span> está digitando
+    <div class="typing-dots">
+        <span></span><span></span><span></span>
+    </div>
+</div>
                                 
                 <form id="message-form" class="chat-input-area">
                     <input type="file" id="image-input" accept="image/*" style="display: none;">
