--- a/public/chat.html
+++ b/public/chat.html
@@ -93,7 +93,12 @@
   .message-bubble { padding: 10px 15px; border-radius: 18px; position: relative; max-width: 100%; word-wrap: break-word; }
   .message-row.self .message-bubble { background-color: var(--message-bg-self); color: var(--message-color-self); border-bottom-right-radius: 4px; }
   .message-row.other .message-bubble { background-color: var(--message-bg-other); color: var(--message-color-other); border-bottom-left-radius: 4px; }
-  .message-bubble strong { display: none; }
+  .message-bubble strong {
+    display: block; /* <-- A MUDANÇA PRINCIPAL É AQUI */
+    font-weight: bold;
+    font-size: 0.9em;
+    margin-bottom: 5px; /* Adiciona um espaço entre o nome e o texto */
+}
   .date-divider { text-align: center; margin: 20px 0; color: #6c757d; font-size: 0.85em; font-weight: 600; text-transform: uppercase; letter-spacing: 0.5px; position: relative; }
   .date-divider::before, .date-divider::after { content: ''; display: block; width: 40%; height: 1px; background-color: #e0e0e0; position: absolute; top: 50%; }
   .date-divider::before { left: 0; }
