--- a/public/chat.html
+++ b/public/chat.html
@@ -88,6 +88,44 @@
 .mention-full-highlight .message-timestamp {
   color: #888 !important;
 }
+
+/* --- INÍCIO: ESTILOS PARA INDICADOR "DIGITANDO" --- */
+.typing-indicator {
+    display: flex;
+    align-items: center;
+    padding: 5px 20px;
+    color: #6c757d;
+    font-style: italic;
+    height: 24px; /* Altura fixa para não "pular" a tela */
+    transition: opacity 0.3s;
+}
+
+.typing-dots span {
+    height: 8px;
+    width: 8px;
+    background-color: #aeb5bc;
+    border-radius: 50%;
+    display: inline-block;
+    margin: 0 2px;
+    animation: typing-animation 1.4s infinite ease-in-out both;
+}
+.typing-dots span:nth-child(1) {
+    animation-delay: -0.32s;
+}
+.typing-dots span:nth-child(2) {
+    animation-delay: -0.16s;
+}
+
+@keyframes typing-animation {
+    0%, 80%, 100% {
+        transform: scale(0);
+    }
+    40% {
+        transform: scale(1.0);
+    }
+}
+/* --- FIM: ESTILOS PARA INDICADOR "DIGITANDO" --- */
+
 /* --- FIM: ESTILOS CORRIGIDOS PARA DESTAQUE DE MENÇÃO --- */
 
   .message-bubble { padding: 10px 15px; border-radius: 18px; position: relative; max-width: 100%; word-wrap: break-word; }
@@ -174,6 +212,13 @@
             </div>
         <div class="messages-container" id="messages">
             </div>
+
+<div id="typing-indicator" class="typing-indicator" style="display: none;">
+    <span id="typing-user-name"></span> está digitando
+    <div class="typing-dots">
+        <span></span><span></span><span></span>
+    </div>
+</div>
 
         <div id="chatInputWrapper" class="chat-input-area">
             <div id="imagePreviewContainer">
